# AuroraProject

./: AlertReader_JSON.cpp  AlertReader_JSON.h  CMakeLists.txt  IAlertReader.h  PlasmaReader_JSON.cpp  PlasmaReader_JSON.h  Plasma_Obs.cpp  Plasma_Obs.h  Plasma_tests.cpp  README.md  Satellites.cpp  Satellites.h  alertReaderFactory.cpp  alertReaderFactory.h  main.cpp  plasmaReaderFactory.h
tests/: Alert_tests.cpp  Plasma_tests.cpp  SatelliteData_tests.cpp  jsonTest.cpp
